# Eva

./: .gitignore  .project  README.md  bochsrc.txt  makefile
bootloader/: makefile
config/: disk.conf  partition_table.conf
kernel/: Cargo.toml  makefile
kernel/src/: boot.asm  grub.cfg  lib.rs  linker.ld  long_mode_start.asm  multiboot_header.asm  vga_interface.rs
kernel/src/memory/: alpha_frame_allocator.rs  mod.rs
kernel/src/memory/alpha_frame_allocator/: mod.rs
kernel/src/memory/paging/: entry.rs  mod.rs  pt_mapper.rs  table.rs  temp_page.rs
mbr/: makefile  mbr_bootstrap.asm
mbr/partition_table_constructor/: chs_address.cc  chs_address.h  exit_codes.h  partition_entry.h  partition_table.h  partition_table_constructor.cc  required_params.h
src/bootloader/bios/: example.conf  example.in  makefile  skeleton.asm
src/bootloader/bios/bootcode/: bootcode.asm  vbr_bootstrap.asm
src/bootloader/bios/example/: boot_image.img  bootloader  bootloader.asm  example.conf  example.in
src/bootloader/bios/mbr_constructor/: chs_address.cc  chs_address.h  config_parser.h  mbr_constructor.cc  mbr_layout.h  partition_entry.cc  partition_entry.h  partition_table.cc  partition_table.h  required_params.h  typedefs.h  utilities.cc  utilities.h
src/bootloader/bios/mbr_constructor/test/: partition_table_test.cc
src/bootloader/bios/partition_table_constructor/: config_parser.cc  partition_entry.cc  partition_table.cc  utilities.cc  utilities.h
src/bootloader/bios/partition_table_constructor/test/: config_parser_test.cc
